2021-01-13  Omar Polo  <op@omarpolo.com>

	* iri.c (parse_scheme): normalize scheme while parsing, so we're
	RFC3986 compliant.

2021-01-11  Omar Polo  <op@omarpolo.com>

	* 1.4 and 1.4.1 tagged

	* gmid.c (main): ipv6 disabled by default and -6 flag to enable it
	(handle): reject non-gemini protocols with 53

2021-01-10  Omar Polo  <op@omarpolo.com>

	* gmid.c (logs): log also the port of the client
	(loop): accept both ipv4 and ipv6

2020-12-26  Omar Polo  <op@omarpolo.com>

	* uri.c (parse_uri): IRI support

2020-12-21  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): -d supports relative paths

2020-12-02  Omar Polo  <op@omarpolo.com>

	* gmid.c: logging reworked and daemonize.  The -l option was
	removed: now it logs on syslog if -f (foreground) is not passed.

2020-11-18  Omar Polo  <op@omarpolo.com>

	* 1.3.2 tagged

	* gmid.c (url_after_proto): fix bug introduced in last version
	regarding full URLs with explicit gemini protocol.

	* 1.3.1 tagged

	* gmid.c (url_after_proto): correct url parsing: accept URLs
	without explicit protocol
	(url_start_of_request): correct handling of relative URLs

2020-11-17  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): add flag -p to change the port

2020-11-10  Omar Polo  <op@omarpolo.com>

	* ChangeLog: 1.3 tagged, fixed ChangeLog format

	* gmid.c (open_file): added support for path parameters for CGI
	scripts

2020-11-06  Omar Polo  <op@omarpolo.com>

	* gmid.1: great improvements to the documentation

	* gmid.c (url_after_proto): ensure that the requested protocol is
	“gemini” and not something else that’s long 6 bytes.

	* gmid.c (loop): added support for cgi scripts (can handle multiple
	concurrently)

2020-11-06  Omar Polo  <op@venera>

	* gmid.1: added option to log to a file

2020-11-05  Omar Polo  <op@omarpolo.com>

	* gmid.c (filetypes): add MIME type for xml files

2020-11-03  Omar Polo  <op@omarpolo.com>

	* 1.2 tagged

	* gmid.c (main): ignore SIGPIPE

2020-10-14  Omar Polo  <op@omarpolo.com>

	* 1.1 tagged
