@@ -20,10 +20,13 @@
 .Sh SYNOPSIS
 .Nm
 .Bk -words
+.Op Fl n
+.Op Fl c Ar config
+|
 .Op Fl 6fh
-.Op Fl c Ar cert.pem
-.Op Fl d Ar docs
-.Op Fl k Ar key.pem
+.Op Fl C Ar cert
+.Op Fl d Ar root
+.Op Fl K Ar key
 .Op Fl p Ar port
 .Op Fl x Ar cgi-bin
 .Ek
